# ChangeLog for dev-ruby/selectivizr-rails
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*selectivizr-rails-1.0.2 (13 Jun 2013)

  13 Jun 2013; Hans de Graaff <graaff@gentoo.org>
  +selectivizr-rails-1.0.2.ebuild:
  Version bump.

*selectivizr-rails-1.0.1 (08 Jan 2013)

  08 Jan 2013; Hans de Graaff <graaff@gentoo.org>
  +selectivizr-rails-1.0.1.ebuild, +metadata.xml:
  Initial import.
