@@ -1,2 +1,3 @@
 DIST selectivizr-rails-1.0.1.gem 7168 SHA256 b536053cbe51525fe2f376d376763c2536988f20b8c5973ff94067c39bccd474 SHA512 8870a2b14860c10a1336e309438f613ed2969cfec023d05ffc4c4bb0138589d620c8b705642566c23af855b00b11f90cf927941e0cb57fa45480fa45bf55075d WHIRLPOOL 52a82bb3612c713f8c59a9a0c431e45851a04e0d9be404a8853320e2ff6009044e59dcd746f80856d46ee6f6360e6158ac44ed3b2df4ffd62bd5a64525522372
 DIST selectivizr-rails-1.0.2.gem 10752 SHA256 f595bd977195e91f1711667278982617eeec48239770e57af912661bb2b6d0f8 SHA512 52715109b21da0094397f9339015954eadeab6de395d0a5707dfc0e952dc0e7ecc2373c223a9a5c7d071d3dfd5932270f0dfad8b5434530831a261001d924e96 WHIRLPOOL 7c0fc24224ed2401595ca661c33f93ed35f2b94096ba648a9716f90a71b45ac80eaa74fb1b8da82f4d8c659e1cf4ffa32dd919d1dd5e0df696a56c83303abcdc
+DIST selectivizr-rails-1.1.2.gem 11776 SHA256 1350cda331886daeb306385d8eaff1245b2571b95ee78269f1db129b00bab5c0 SHA512 04d1bab98937d0bb4eb806daedcde47a33081165e3101e5ea8ac95ebfb81d662fada2e3e57c5ce033df0776446a498ef36ad16ebd6b2bb3461c09fdc1ab26ec0 WHIRLPOOL 253bca8551b959bc5a3a683b9fe4dcf64e2d8055aede6bedab7f624627edbaa6b69e92a98fdaa31528a962f0aaa467c3545ec2ea1af45519a286f6df6b955c02
